--- a/backend/backend/build.gradle
+++ b/backend/backend/build.gradle
@@ -15,6 +15,12 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.mariadb.jdbc:mariadb-java-client'
+    implementation 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
